# Anonymous_Query_SDK

./: README.md
cpp/: CMakeLists.txt
cpp/cgo/: pir.go  pirGO_wrap.cxx
cpp/cjava/: PirServer.java  VectorUInt8.java  pir.java  pirJAVA_wrap.cxx
cpp/faker/: CMakeLists.txt  README.md  main.cpp
cpp/faker/include/: Faker.h  Util.h
cpp/faker/src/: Faker.cpp  Util.cpp
cpp/pir/: CMakeLists.txt  README.md  main.cpp
cpp/pir/include/: pir_client.h  pir_server.h
cpp/pir/src/: pir_client.cpp  pir_server.cpp
cpp/swig-go/: CMakeLists.txt  pir.i
cpp/swig-java/: CMakeLists.txt  README.md  pir.i
cpp/swig-python/: CMakeLists.txt  README.md  seal.cpp
go/: go.mod  main.go
go/lib/: byte2vector.go  libpir-go-arm64.dylib  pir.go
go/test/: faker_test.go  pir_test.go
java/: pom.xml
java/src/main/java/com/pir/: ArrayofVectorUInt8.java  Faker.java  PirClient.java  SWIGTYPE_p_int.java  Vector2Byte.java  pirJNI.java
java/src/test/java/com/pir/: FakerTest.java  PirTest.java
